--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
       <version>2.3.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>ru.yandex.clickhouse</groupId>
+      <artifactId>clickhouse-jdbc</artifactId>
+      <version>0.2</version>
+    </dependency>
+
   </dependencies>
 
   <build>
