--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
       <version>0.2</version>
     </dependency>
 
+    <dependency>
+        <groupId>org.apache.flink</groupId>
+        <artifactId>flink-streaming-java_2.12</artifactId>
+        <version>1.9.1</version>
+        <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -59,7 +66,7 @@
               </descriptorRefs>
               <archive>
                   <manifest>
-                      <mainClass>com.kafkaDemo.App</mainClass>
+                      <mainClass>com.kafkaDemo.SocketWindowWordCount</mainClass>
                   </manifest>
               </archive>
           </configuration>
