--- a/pom.xml
+++ b/pom.xml
@@ -48,19 +48,19 @@
     <dependency>
         <groupId>org.apache.flink</groupId>
         <artifactId>flink-streaming-java_2.12</artifactId>
-        <version>1.9.1</version>
+        <version>1.10.0</version>
         <scope>provided</scope>
     </dependency>
 
     <dependency>
         <groupId>org.apache.flink</groupId>
-        <artifactId>flink-clients_2.11</artifactId>
-        <version>1.9.1</version>
+        <artifactId>flink-clients_2.12</artifactId>
+        <version>1.10.0</version>
     </dependency>
     <dependency>
         <groupId>org.apache.flink</groupId>
-        <artifactId>flink-connector-wikiedits_2.11</artifactId>
-        <version>1.9.1</version>
+        <artifactId>flink-connector-wikiedits_2.12</artifactId>
+        <version>1.10.0</version>
     </dependency>
 
     <dependency>
@@ -87,7 +87,7 @@
               </descriptorRefs>
               <archive>
                   <manifest>
-                      <mainClass>com.kafkaDemo.WikipediaAnalysis</mainClass>
+                      <mainClass>com.kafkaDemo.SocketWindowWordCount</mainClass>
                   </manifest>
               </archive>
           </configuration>
