--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,17 @@
        <artifactId>slf4j-log4j12</artifactId>
        <version>1.7.5</version>
    </dependency>
+   <dependency>
+        <groupId>com.googlecode.json-simple</groupId>
+        <artifactId>json-simple</artifactId>
+        <version>1.1.1</version>
+    </dependency>
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.6</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -87,7 +98,7 @@
               </descriptorRefs>
               <archive>
                   <manifest>
-                      <mainClass>com.kafkaDemo.CrimeAnalytic</mainClass>
+                      <mainClass>com.kafkaDemo.JsonHandle</mainClass>
                   </manifest>
               </archive>
           </configuration>
